<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Choose_detailActivity"
    android:background="@color/green">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@color/green2"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id">

    </com.google.android.gms.ads.AdView>
    <!-- WEIGHT INPUT SECTION -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/choose_detail_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="7"
            android:src="@drawable/america_1_2" />
        <View
            android:layout_below="@+id/vertical"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="2dp"
            android:background="@xml/shadow_top"
            >
        </View>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:text="@string/text_41"
                android:textSize="20sp"
                android:gravity="center_horizontal|center_vertical"
                android:background="@xml/background_padding_backgroumd_green"
                />
            <TextView
                android:id="@+id/choose_detail_0"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:text="@string/text_41"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:background="@xml/background_padding_backgroumd_green"
                />
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:text="@string/text_35"
                android:textSize="20sp"
                android:gravity="center_horizontal|center_vertical"
                android:background="@xml/background_padding_backgroumd_green"
                />

            <TextView
                android:id="@+id/choose_detail_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:gravity="center_vertical"
                android:background="@xml/background_selector_green"
                android:text="@string/text_35"
                android:textSize="20sp" />
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:text="@string/text_36"
                android:textSize="20sp"
                android:gravity="center_horizontal|center_vertical"
                android:background="@xml/background_padding_backgroumd_green"
                />
            <TextView
                android:id="@+id/choose_detail_3"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:text="@string/text_36"
                android:textSize="25sp"
                android:gravity="center_vertical"
                android:background="@xml/background_padding_backgroumd_green"
                />
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:text="@string/text_37"
                android:textSize="20sp"
                android:gravity="center_horizontal|center_vertical"
                android:background="@xml/background_padding_backgroumd_green"
                />
            <TextView
                android:id="@+id/choose_detail_4"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:text="@string/text_37"
                android:textSize="30sp"
                android:gravity="center_vertical"
                android:background="@xml/background_selector_green"
                />
        </TableRow>
        <View
            android:layout_below="@+id/vertical"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="5dp"
            android:background="@xml/shadow"
            >
        </View>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.8"
            >
            <Button
                android:id="@+id/button_choose_detail_back"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/text_33"
                android:textSize="25sp"
                android:gravity="center_vertical|center_horizontal"
                android:visibility="invisible"
                />

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1.5">
            <LinearLayout
                android:id="@+id/button_choose_detail_go"
                android:layout_height="51dp"
                android:layout_width="51dp"
                android:background="@xml/background_padding_circle_shadow">
                <View
                    android:layout_width="0.5dp"
                    android:layout_height="0.5dp"/>
                <LinearLayout
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:background="@xml/background_padding_circle">
                    <ImageView
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:src="@mipmap/play_button"
                        />
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </TableRow>


    </TableLayout>

    <!-- WEIGHT INPUT EDIT TEXT FIELD RECEIVES FOCUS -->


    <!-- TEXTVIEWS FOR BASE COST LABEL AND COMPUTATION  -->

    <!-- TEXTVIEWS FOR ADDED COST LABEL AND COMPUTATION  -->


    <!-- TEXTVIEWS FOR THE TOTAL COST LABEL AND COMPUTATION  -->

</RelativeLayout>
